// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton Snapshot 1`] = `
<span
  className="css-srlyvc"
>
  <input
    checked={true}
    className="css-1nwbmtb"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="css-1umxdg8"
  />
</span>
`;

exports[`RadioButton Snapshot 2`] = `
<span
  className="css-srlyvc"
>
  <input
    className="css-1nwbmtb"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="css-1umxdg8"
  />
</span>
`;
